some spacing fix's

--- a/styles.css
+++ b/styles.css
@@ -398,9 +398,9 @@ h2 {
     justify-content: flex-start;
     color: #fff;
     background-color: #222;
-    border: 1px solid #666;
-    border-radius: 18px;
-    height: 36px;
+    border: 1px solid #444;
+    border-radius: 15px;
+    height: 35px;
     width: 350px;
     font-size: 15px;
     padding-left: 15px;
